# cryptography-with-Rust

./: README.md
Extended-Euclidean-Algorithm/: Cargo.toml  README.md
Extended-Euclidean-Algorithm/src/: main.rs
customize-constraint-system-with-arkwork/: Cargo.toml
customize-constraint-system-with-arkwork/src/: main.rs
customize-constraint-system-with-arkwork/src/cs_gen/: build_cs.rs  mod.rs
customize-constraint-system-with-arkworks/: Cargo.toml  README.md
customize-constraint-system-with-arkworks/src/: main.rs
customize-constraint-system-with-arkworks/src/cs_gen/: build_cs.rs  mod.rs
customize-constraint-system-with-arkworks/src/data/: memory-table.json
