[package]
name = "customize-constraint-system-with-arkwork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_json = "1.0.59"

ark-ff = { version = "^0.3.0", default-features = false }
ark-relations = {version = "^0.3.0"}
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0" }
ark-bls12-377 = { version = "^0.3.0" }
ark-cp6-782 = { version = "^0.3.0", default-features = false }